--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
